# sctp

./: CMakeLists.txt  README.md  main.cpp  sctp.cpp  sctp.h
sctp/: common.h
